// Wiregost - Golang Exploitation Framework
// Copyright Â© 2020 Para
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package module;

option go_package = "modulepb";


// Option - An option used by the module
message Option {
        string Name = 1;            // Option name
        string Category = 2;        // Options can be classified according to user preferences
        string Value = 3;           // Option value, is always a string and converted later if needed
        bool Required = 5;          // Is this option required ? If yes it should already have a value
        string Flag = 6;            // Sometimes the option value is used as a flag in a command line, so it might have a different form.
        string Description = 7;     // A description for this option.
}

// OptionsRequest - Get all options of a module 
message OptionsRequest {
        string Path = 2; 
}

message Options {
        string Err = 2;
        map<string, Option> Options = 13;       // All options for this module. Send a list with them, for retrieving order.
}

// SetOptionRequest - Set an option for the module
message SetOptionRequest {
        uint32 WorkspaceID = 1;
        string Path = 2; 
        string Name = 3;
        string Value = 4;
}

message SetOption {
        bool Success = 1;
        string Err = 2;
}

