// Wiregost - Golang Exploitation Framework
// Copyright Â© 2020 Para
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU General Public License as published by
// the Free Software Foundation, either version 3 of the License, or
// (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU General Public License for more details.
//
// You should have received a copy of the GNU General Public License
// along with this program.  If not, see <http://www.gnu.org/licenses/>.

syntax = "proto3";

package module;

option go_package = "modulepb";

import "module/module.proto";
import "module/option.proto";

// Module - A little RPC service providing methods for module objects, with which
// they can track and synchronise state between their stack version and the server's.
// All other elements that the modules will need, per type, will be registered by them.
service Stack {

        rpc UseModule(UseRequest) returns (Use);
        rpc RunModule(RunRequest) returns (Run);
        rpc GetInfo(InfoRequest) returns (Info);
        rpc GetOptions(OptionsRequest) returns (Options);
        rpc SetOption(SetOptionRequest) returns (Option);
}

// UseRequest - Load a module onto the stack
message UseRequest {
        string Path = 1;
}

message Use {
        Module Loaded = 1;
        string Err = 2;
}

// PopRequest - Pop one or more modules from the user stack
message PopRequest {
        repeated string Path = 3;
        bool All = 4;                   // Pop all modules from stack
}

message Pop {
        Module Next = 1;                // Sends next module on stack: empty if none left
        string Err = 2;
}

// PushRequest - Push one or more modules onto the user stack
message PushRequest {
        repeated string Path = 3;
}

message Push {
        string Err = 1;
}

// ClearRequest - Clears all modules from the user's stack
message ClearRequest {
}

message Clear {
        string Err = 1;
}

// ReloadRequest - Recompile and reload the module stack.
message ReloadRequest {
}

message Reload {
        string Err = 1;
}
